--- a/gst-plugins-bad/po/hu.po
+++ b/gst-plugins-bad/po/hu.po
@@ -1,13 +1,13 @@
 # Hungarian translation of gst-plugins-bad
 # This file is distributed under the same license as the gst-plugins-bad package.
-# Copyright (C) 2007, 2008 Free Software Foundation, Inc.
-# Gabor Kelemen <kelemeng@gnome.hu>, 2007, 2008.
+# Copyright (C) 2007, 2008, 2009 Free Software Foundation, Inc.
+# Gabor Kelemen <kelemeng@gnome.hu>, 2007, 2008, 2009.
 msgid ""
 msgstr ""
-"Project-Id-Version: gst-plugins-bad 0.10.6.3\n"
+"Project-Id-Version: gst-plugins-bad 0.10.10.2\n"
 "Report-Msgid-Bugs-To: http://bugzilla.gnome.org/\n"
-"POT-Creation-Date: 2009-03-20 23:36+0000\n"
-"PO-Revision-Date: 2008-05-12 03:32+0200\n"
+"POT-Creation-Date: 2009-05-12 00:07+0100\n"
+"PO-Revision-Date: 2009-04-20 02:16+0200\n"
 "Last-Translator: Gabor Kelemen <kelemeng@gnome.hu>\n"
 "Language-Team: Hungarian <translation-team-hu@lists.sourceforge.net>\n"
 "MIME-Version: 1.0\n"
@@ -16,28 +16,25 @@ msgstr ""
 "X-Generator: KBabel 1.11.4\n"
 "Plural-Forms:  nplurals=2; plural=(n != 1);\n"
 
-#: ext/resindvd/resindvdsrc.c:333
-#, fuzzy
+#: ext/resindvd/resindvdsrc.c:352
 msgid "Could not read title information for DVD."
-msgstr "Nem lehet írni a fájlba („%s”)."
+msgstr "Nem lehet címinformációkat olvasni a DVD-ről."
 
-#: ext/resindvd/resindvdsrc.c:339
-#, fuzzy, c-format
+#: ext/resindvd/resindvdsrc.c:358
+#, c-format
 msgid "Failed to open DVD device '%s'."
-msgstr "Nem nyitható meg az előtéteszköz („%s”)."
+msgstr "Nem nyitható meg a DVD eszköz („%s”)."
 
-#: ext/resindvd/resindvdsrc.c:345
+#: ext/resindvd/resindvdsrc.c:364
 msgid "Failed to set PGC based seeking."
-msgstr ""
+msgstr "A PGC-alapú keresés beállítása meghiúsult."
 
 #: ext/resindvd/rsnbasesrc.c:1659
-#, fuzzy
 msgid "Internal clock error."
-msgstr "Belső adatfolyamhiba."
+msgstr "Belső órahiba."
 
 #: ext/resindvd/rsnbasesrc.c:1904 ext/resindvd/rsnbasesrc.c:1915
 #: gst/aiffparse/aiffparse.c:1265
-#, fuzzy
 msgid "Internal data flow error."
 msgstr "Belső adatfolyamhiba."
 
@@ -59,336 +56,342 @@ msgstr "Belső adatfolyamhiba."
 msgid "Could not write to file \"%s\"."
 msgstr "Nem lehet írni a fájlba („%s”)."
 
-#: sys/dvb/gstdvbsrc.c:699 sys/dvb/gstdvbsrc.c:792
+#: sys/dvb/gstdvbsrc.c:706 sys/dvb/gstdvbsrc.c:799
 #, c-format
 msgid "Device \"%s\" does not exist."
 msgstr "Az eszköz („%s”) nem létezik."
 
-#: sys/dvb/gstdvbsrc.c:703
+#: sys/dvb/gstdvbsrc.c:710
 #, c-format
 msgid "Could not open frontend device \"%s\"."
 msgstr "Nem nyitható meg az előtéteszköz („%s”)."
 
-#: sys/dvb/gstdvbsrc.c:715
+#: sys/dvb/gstdvbsrc.c:722
 #, c-format
 msgid "Could not get settings from frontend device \"%s\"."
 msgstr "Nem kérhetők le a beállítások az előtéteszköztől („%s”)."
 
-#: sys/dvb/gstdvbsrc.c:796
+#: sys/dvb/gstdvbsrc.c:803
 #, c-format
 msgid "Could not open file \"%s\" for reading."
 msgstr "A fájl („%s”) nem nyitható meg olvasásra."
 
 #: sys/oss4/oss4-mixer.c:302
-#, fuzzy
 msgid "Could not open audio device for mixer control handling."
-msgstr "A fájl („%s”) nem nyitható meg olvasásra."
+msgstr "A hangeszköz nem nyitható meg a keverő vezérlőinek kezeléséhez."
 
 #: sys/oss4/oss4-mixer.c:316
 msgid ""
 "Could not open audio device for mixer control handling. This version of the "
 "Open Sound System is not supported by this element."
 msgstr ""
+"A hangeszköz nem nyitható meg a keverő vezérlőinek kezeléséhez. A Nyílt "
+"hangrendszer ezen verzióját nem támogatja az elem."
 
 #: sys/oss4/oss4-mixer.c:720
 msgid "Fast"
-msgstr ""
+msgstr "Gyors"
 
 #: sys/oss4/oss4-mixer.c:721
 msgid "Low"
-msgstr ""
+msgstr "Alacsony"
 
 #: sys/oss4/oss4-mixer.c:722
 msgid "Medium"
-msgstr ""
+msgstr "Közepes"
 
 #: sys/oss4/oss4-mixer.c:723
 msgid "High"
-msgstr ""
+msgstr "Magas"
 
 #: sys/oss4/oss4-mixer.c:724
 msgid "Very high"
-msgstr ""
+msgstr "Nagyon magas"
 
 #: sys/oss4/oss4-mixer.c:725
 msgid "Production"
-msgstr ""
+msgstr "Előállítás"
 
 #: sys/oss4/oss4-mixer.c:726
 msgid "Off"
-msgstr ""
+msgstr "Ki"
 
 #: sys/oss4/oss4-mixer.c:727
 msgid "On"
-msgstr ""
+msgstr "Be"
 
 #: sys/oss4/oss4-mixer.c:728
 msgid "Stereo"
-msgstr ""
+msgstr "Sztereó"
 
 #: sys/oss4/oss4-mixer.c:729
 msgid "Surround sound"
-msgstr ""
+msgstr "Térhatású hang"
 
 #: sys/oss4/oss4-mixer.c:730 sys/oss4/oss4-mixer.c:805
 msgid "Input mix"
-msgstr ""
+msgstr "Bemeneti keverő"
 
 #: sys/oss4/oss4-mixer.c:731 sys/oss4/oss4-mixer.c:800
 msgid "Front"
-msgstr ""
+msgstr "Elöl"
 
 #: sys/oss4/oss4-mixer.c:732 sys/oss4/oss4-mixer.c:801
 msgid "Rear"
-msgstr ""
+msgstr "Hátul"
 
 #: sys/oss4/oss4-mixer.c:733 sys/oss4/oss4-mixer.c:802
 msgid "Side"
-msgstr ""
+msgstr "Oldalt"
 
 #: sys/oss4/oss4-mixer.c:734 sys/oss4/oss4-mixer.c:803
 msgid "Center / LFE"
-msgstr ""
+msgstr "Közép/LFE"
 
 #: sys/oss4/oss4-mixer.c:735 sys/oss4/oss4-mixer.c:794
 msgid "Microphone"
-msgstr ""
+msgstr "Mikrofon"
 
 #: sys/oss4/oss4-mixer.c:736 sys/oss4/oss4-mixer.c:795
 msgid "Front panel microphone"
-msgstr ""
+msgstr "Előlapi mikrofon"
 
 #: sys/oss4/oss4-mixer.c:737
 msgid "Input"
-msgstr ""
+msgstr "Bemenet"
 
 #: sys/oss4/oss4-mixer.c:738 sys/oss4/oss4-mixer.c:796
 msgid "Line-in"
-msgstr ""
+msgstr "Vonalbemenet"
 
 #: sys/oss4/oss4-mixer.c:739
 msgid "PCM 1"
-msgstr ""
+msgstr "PCM 1"
 
 #: sys/oss4/oss4-mixer.c:740
 msgid "PCM 2"
-msgstr ""
+msgstr "PCM 2"
 
 #: sys/oss4/oss4-mixer.c:741
 msgid "PCM 3"
-msgstr ""
+msgstr "PCM 3"
 
 #: sys/oss4/oss4-mixer.c:742
 msgid "PCM 4"
-msgstr ""
+msgstr "PCM 4"
 
 #: sys/oss4/oss4-mixer.c:754
 msgid "Green connector"
-msgstr ""
+msgstr "Zöld csatlakozó"
 
 #: sys/oss4/oss4-mixer.c:755
 msgid "Green front panel connector"
-msgstr ""
+msgstr "Zöld előlapi csatlakozó"
 
 #: sys/oss4/oss4-mixer.c:756
 msgid "Pink connector"
-msgstr ""
+msgstr "Rózsaszín csatlakozó"
 
 #: sys/oss4/oss4-mixer.c:757
 msgid "Pink front panel connector"
-msgstr ""
+msgstr "Rózsaszín előlapi csatlakozó"
 
 #: sys/oss4/oss4-mixer.c:758
 msgid "Blue connector"
-msgstr ""
+msgstr "Kék csatlakozó"
 
 #: sys/oss4/oss4-mixer.c:759
 msgid "Blue front panel connector"
-msgstr ""
+msgstr "Kék előlapi csatlakozó"
 
 #: sys/oss4/oss4-mixer.c:760
 msgid "Orange connector"
-msgstr ""
+msgstr "Narancs csatlakozó"
 
 #: sys/oss4/oss4-mixer.c:761
 msgid "Orange front panel connector"
-msgstr ""
+msgstr "Narancs előlapi csatlakozó"
 
 #: sys/oss4/oss4-mixer.c:762
 msgid "Black connector"
-msgstr ""
+msgstr "Fekete csatlakozó"
 
 #: sys/oss4/oss4-mixer.c:763
 msgid "Black front panel connector"
-msgstr ""
+msgstr "Fekete előlapi csatlakozó"
 
 #: sys/oss4/oss4-mixer.c:764
 msgid "Gray connector"
-msgstr ""
+msgstr "Szürke csatlakozó"
 
 #: sys/oss4/oss4-mixer.c:765
 msgid "Gray front panel connector"
-msgstr ""
+msgstr "Szürke előlapi csatlakozó"
 
 #: sys/oss4/oss4-mixer.c:766
 msgid "White connector"
-msgstr ""
+msgstr "Fehér csatlakozó"
 
 #: sys/oss4/oss4-mixer.c:767
 msgid "White front panel connector"
-msgstr ""
+msgstr "Fehér előlapi csatlakozó"
 
 #: sys/oss4/oss4-mixer.c:768
 msgid "Red connector"
-msgstr ""
+msgstr "Vörös csatlakozó"
 
 #: sys/oss4/oss4-mixer.c:769
 msgid "Red front panel connector"
-msgstr ""
+msgstr "Vörös előlapi csatlakozó"
 
 #: sys/oss4/oss4-mixer.c:770
 msgid "Yellow connector"
-msgstr ""
+msgstr "Sárga csatlakozó"
 
 #: sys/oss4/oss4-mixer.c:771
 msgid "Yellow front panel connector"
-msgstr ""
+msgstr "Sárga előlapi csatlakozó"
 
 #: sys/oss4/oss4-mixer.c:774
 msgid "Green connector function"
-msgstr ""
+msgstr "Zöld csatlakozó funkciója"
 
 #: sys/oss4/oss4-mixer.c:775
 msgid "Green front panel connector function"
-msgstr ""
+msgstr "Zöld előlapi csatlakozó funkciója"
 
 #: sys/oss4/oss4-mixer.c:776
 msgid "Pink connector function"
-msgstr ""
+msgstr "Rózsaszín csatlakozó funkciója"
 
 #: sys/oss4/oss4-mixer.c:777
 msgid "Pink front panel connector function"
-msgstr ""
+msgstr "Rózsaszín előlapi csatlakozó funkciója"
 
 #: sys/oss4/oss4-mixer.c:778
 msgid "Blue connector function"
-msgstr ""
+msgstr "Kék csatlakozó funkciója"
 
 #: sys/oss4/oss4-mixer.c:779
 msgid "Blue front panel connector function"
-msgstr ""
+msgstr "Kék előlapi csatlakozó funkciója"
 
 #: sys/oss4/oss4-mixer.c:780
 msgid "Orange connector function"
-msgstr ""
+msgstr "Narancs csatlakozó funkciója"
 
 #: sys/oss4/oss4-mixer.c:781
 msgid "Orange front panel connector function"
-msgstr ""
+msgstr "Narancs előlapi csatlakozó funkciója"
 
 #: sys/oss4/oss4-mixer.c:782
 msgid "Black connector function"
-msgstr ""
+msgstr "Fekete csatlakozó funkciója"
 
 #: sys/oss4/oss4-mixer.c:783
 msgid "Black front panel connector function"
-msgstr ""
+msgstr "Fekete előlapi csatlakozó funkciója"
 
 #: sys/oss4/oss4-mixer.c:784
 msgid "Gray connector function"
-msgstr ""
+msgstr "Szürke csatlakozó funkciója"
 
 #: sys/oss4/oss4-mixer.c:785
 msgid "Gray front panel connector function"
-msgstr ""
+msgstr "Szürke előlapi csatlakozó funkciója"
 
 #: sys/oss4/oss4-mixer.c:786
 msgid "White connector function"
-msgstr ""
+msgstr "Fehér csatlakozó funkciója"
 
 #: sys/oss4/oss4-mixer.c:787
 msgid "White front panel connector function"
-msgstr ""
+msgstr "Fehér előlapi csatlakozó funkciója"
 
 #: sys/oss4/oss4-mixer.c:788
 msgid "Red connector function"
-msgstr ""
+msgstr "Vörös csatlakozó funkciója"
 
 #: sys/oss4/oss4-mixer.c:789
 msgid "Red front panel connector function"
-msgstr ""
+msgstr "Vörös előlapi csatlakozó funkciója"
 
 #: sys/oss4/oss4-mixer.c:790
 msgid "Yellow connector function"
-msgstr ""
+msgstr "Sárga csatlakozó funkciója"
 
 #: sys/oss4/oss4-mixer.c:791
 msgid "Yellow front panel connector function"
-msgstr ""
+msgstr "Sárga előlapi csatlakozó funkciója"
 
 #: sys/oss4/oss4-mixer.c:797
 msgid "Front panel line-in"
-msgstr ""
+msgstr "Előlapi vonalbemenet"
 
 #: sys/oss4/oss4-mixer.c:798
 msgid "Headphones"
-msgstr ""
+msgstr "Fülhallgatók"
 
 #: sys/oss4/oss4-mixer.c:799
 msgid "Front panel headphones"
-msgstr ""
+msgstr "Előlapi fülhallgató"
 
 #: sys/oss4/oss4-mixer.c:804
 msgid "PCM"
-msgstr ""
+msgstr "PCM"
 
 #: sys/oss4/oss4-mixer.c:846
 msgid "Virtual mixer input"
-msgstr ""
+msgstr "Virtuális keverőbemenet"
 
 #: sys/oss4/oss4-mixer.c:848
 msgid "Virtual mixer output"
-msgstr ""
+msgstr "Virtuális keverőkimenet"
 
 #: sys/oss4/oss4-mixer.c:850
 msgid "Virtual mixer channel configuration"
-msgstr ""
+msgstr "Virtuális keverő csatornabeállításai"
 
 #: sys/oss4/oss4-sink.c:376 sys/oss4/oss4-source.c:367
 msgid ""
 "Could not open audio device for playback. Device is being used by another "
 "application."
 msgstr ""
+"Nem nyitható meg hangeszköz a lejátszáshoz. Az eszközt másik alkalmazás "
+"használja."
 
 #: sys/oss4/oss4-sink.c:386 sys/oss4/oss4-source.c:377
 msgid ""
 "Could not open audio device for playback. You don't have permission to open "
 "the device."
 msgstr ""
+"Nem nyitható meg hangeszköz a lejátszáshoz. Nincs jogosultsága az eszköz "
+"megnyitására."
 
 #: sys/oss4/oss4-sink.c:397 sys/oss4/oss4-source.c:388
-#, fuzzy
 msgid "Could not open audio device for playback."
-msgstr "Nem nyitható meg az előtéteszköz („%s”)."
+msgstr "Nem nyitható meg hangeszköz a lejátszáshoz."
 
 #: sys/oss4/oss4-sink.c:406 sys/oss4/oss4-source.c:398
 msgid ""
 "Could not open audio device for playback. This version of the Open Sound "
 "System is not supported by this element."
 msgstr ""
+"Nem nyitható meg hangeszköz a lejátszáshoz. A Nyílt hangrendszer ezen "
+"verzióját nem támogatja az elem."
 
 #: sys/oss4/oss4-sink.c:522
 msgid "Playback is not supported by this audio device."
-msgstr ""
+msgstr "A hangeszköz nem támogatja a lejátszást."
 
 #: sys/oss4/oss4-sink.c:529
 msgid "Audio playback error."
-msgstr ""
+msgstr "Hanglejátszási hiba."
 
 #: sys/oss4/oss4-source.c:520
 msgid "Recording is not supported by this audio device."
-msgstr ""
+msgstr "A hangeszköz nem támogatja a felvételt."
 
 #: sys/oss4/oss4-source.c:527
 msgid "Error recording from audio device."
-msgstr ""
+msgstr "Hiba a hangeszközről való felvételkor."
