--- a/gstreamer/po/fi.po
+++ b/gstreamer/po/fi.po
@@ -12,7 +12,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: gstreamer 0.10.22.2\n"
 "Report-Msgid-Bugs-To: http://bugzilla.gnome.org/\n"
-"POT-Creation-Date: 2009-05-10 22:30+0100\n"
+"POT-Creation-Date: 2009-05-12 01:43+0100\n"
 "PO-Revision-Date: 2009-04-19 21:15+0300\n"
 "Last-Translator: Tommi Vainikainen <Tommi.Vainikainen@iki.fi>\n"
 "Language-Team: Finnish <translation-team-fi@lists.sourceforge.net>\n"
@@ -463,6 +463,14 @@ msgstr "tekstityskoodekki"
 
 msgid "codec the subtitle data is stored in"
 msgstr "koodekki, jolla tekstitystiedot on tallennettu"
+
+#, fuzzy
+msgid "container format"
+msgstr "yhteystiedot"
+
+#, fuzzy
+msgid "container format the data is stored in"
+msgstr "koodekki, jolla data on tallennettu"
 
 msgid "bitrate"
 msgstr "bittinopeus"
