--- a/gstreamer/po/zh_CN.po
+++ b/gstreamer/po/zh_CN.po
@@ -6,7 +6,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: gstreamer 0.10.22.2\n"
 "Report-Msgid-Bugs-To: http://bugzilla.gnome.org/\n"
-"POT-Creation-Date: 2009-05-10 22:30+0100\n"
+"POT-Creation-Date: 2009-05-12 01:43+0100\n"
 "PO-Revision-Date: 2009-05-01 11:53中国标准时间\n"
 "Last-Translator: Ji ZhengYu <zhengyuji@gmail.com>\n"
 "Language-Team: Chinese (simplified) <translation-team-zh-cn@lists."
@@ -444,6 +444,14 @@ msgstr "字幕编码"
 
 msgid "codec the subtitle data is stored in"
 msgstr "字幕编码数据保存在"
+
+#, fuzzy
+msgid "container format"
+msgstr "联系人信息"
+
+#, fuzzy
+msgid "container format the data is stored in"
+msgstr "数据以...编码存储"
 
 msgid "bitrate"
 msgstr "比特率"
