--- a/gstreamer/po/af.po
+++ b/gstreamer/po/af.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: gstreamer 0.9.7\n"
 "Report-Msgid-Bugs-To: http://bugzilla.gnome.org/\n"
-"POT-Creation-Date: 2009-05-10 22:30+0100\n"
+"POT-Creation-Date: 2009-05-12 01:43+0100\n"
 "PO-Revision-Date: 2005-12-05 11:45+0200\n"
 "Last-Translator: Petri Jooste <rkwjpj@puk.ac.za>\n"
 "Language-Team: Afrikaans <i18n@af.org.za>\n"
@@ -466,6 +466,14 @@ msgstr "video-kodek"
 #, fuzzy
 msgid "codec the subtitle data is stored in"
 msgstr "kodek waarmee die videodata gestoor is"
+
+#, fuzzy
+msgid "container format"
+msgstr "kontakinformasie"
+
+#, fuzzy
+msgid "container format the data is stored in"
+msgstr "kodek waarmee die data gestoor is"
 
 msgid "bitrate"
 msgstr "bistempo"
