--- a/gstreamer/po/ca.po
+++ b/gstreamer/po/ca.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: gstreamer 0.9.7\n"
 "Report-Msgid-Bugs-To: http://bugzilla.gnome.org/\n"
-"POT-Creation-Date: 2009-05-10 22:30+0100\n"
+"POT-Creation-Date: 2009-05-12 01:43+0100\n"
 "PO-Revision-Date: 2005-12-02 17:43+0100\n"
 "Last-Translator: Jordi Mallach <jordi@sindominio.net>\n"
 "Language-Team: Catalan <ca@dodds.net>\n"
@@ -470,6 +470,14 @@ msgstr "còdec de vídeo"
 #, fuzzy
 msgid "codec the subtitle data is stored in"
 msgstr "còdel en el qual estan emmagatzemades les dades de vídeo"
+
+#, fuzzy
+msgid "container format"
+msgstr "informació de contactec"
+
+#, fuzzy
+msgid "container format the data is stored in"
+msgstr "còdec en el qual estan emmagatzemades les dades"
 
 msgid "bitrate"
 msgstr "ràtio de bits"
