--- a/gstreamer/po/cs.po
+++ b/gstreamer/po/cs.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: gstreamer 0.10.20.3\n"
 "Report-Msgid-Bugs-To: http://bugzilla.gnome.org/\n"
-"POT-Creation-Date: 2009-05-10 22:30+0100\n"
+"POT-Creation-Date: 2009-05-12 01:43+0100\n"
 "PO-Revision-Date: 2008-10-12 12:12+0200\n"
 "Last-Translator: Miloslav Trmac <mitr@volny.cz>\n"
 "Language-Team: Czech <translation-team-cs@lists.sourceforge.net>\n"
@@ -457,6 +457,14 @@ msgstr "kodek videa"
 #, fuzzy
 msgid "codec the subtitle data is stored in"
 msgstr "kodek, ve kterém jsou uložena data videa"
+
+#, fuzzy
+msgid "container format"
+msgstr "kontaktní informace"
+
+#, fuzzy
+msgid "container format the data is stored in"
+msgstr "kodek, ve kterém jsou uložena data"
 
 msgid "bitrate"
 msgstr "bitrate"
