--- a/gstreamer/po/de.po
+++ b/gstreamer/po/de.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: gstreamer 0.8.1\n"
 "Report-Msgid-Bugs-To: http://bugzilla.gnome.org/\n"
-"POT-Creation-Date: 2009-05-10 22:30+0100\n"
+"POT-Creation-Date: 2009-05-12 01:43+0100\n"
 "PO-Revision-Date: 2004-06-05 09:32+0100\n"
 "Last-Translator: Roland Illig <roland.illig@gmx.de>\n"
 "Language-Team: German <de@li.org>\n"
@@ -513,6 +513,14 @@ msgstr "Video-Codec"
 #, fuzzy
 msgid "codec the subtitle data is stored in"
 msgstr "Datenformat, in dem die Videodaten gespeichert sind"
+
+#, fuzzy
+msgid "container format"
+msgstr "Kontaktinformation"
+
+#, fuzzy
+msgid "container format the data is stored in"
+msgstr "Datenformat, in dem die Daten gespeichert sind"
 
 msgid "bitrate"
 msgstr "Bitrate"
