--- a/gstreamer/po/hu.po
+++ b/gstreamer/po/hu.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: gstreamer 0.10.22.2\n"
 "Report-Msgid-Bugs-To: http://bugzilla.gnome.org/\n"
-"POT-Creation-Date: 2009-05-10 22:30+0100\n"
+"POT-Creation-Date: 2009-05-12 01:43+0100\n"
 "PO-Revision-Date: 2009-04-17 23:54+0200\n"
 "Last-Translator: Gabor Kelemen <kelemeng@gnome.hu>\n"
 "Language-Team: Hungarian <translation-team-hu@lists.sourceforge.net>\n"
@@ -459,6 +459,14 @@ msgstr "feliratkodek"
 
 msgid "codec the subtitle data is stored in"
 msgstr "a feliratadatok tárolására használt kodek"
+
+#, fuzzy
+msgid "container format"
+msgstr "kapcsolatinformációk"
+
+#, fuzzy
+msgid "container format the data is stored in"
+msgstr "az adatok tárolására használt kodek"
 
 msgid "bitrate"
 msgstr "bitsebesség"
