--- a/gstreamer/po/nl.po
+++ b/gstreamer/po/nl.po
@@ -10,7 +10,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: gstreamer 0.10.22.2\n"
 "Report-Msgid-Bugs-To: http://bugzilla.gnome.org/\n"
-"POT-Creation-Date: 2009-05-10 22:30+0100\n"
+"POT-Creation-Date: 2009-05-12 01:43+0100\n"
 "PO-Revision-Date: 2009-05-04 13:12+0200\n"
 "Last-Translator: Freek de Kruijf <f.de.kruijf@hetnet.nl>\n"
 "Language-Team: Dutch <vertaling@vrijschrift.org>\n"
@@ -462,6 +462,14 @@ msgstr "codec voor ondertiteling"
 
 msgid "codec the subtitle data is stored in"
 msgstr "codec waarin de ondertiteling is opgeslagen"
+
+#, fuzzy
+msgid "container format"
+msgstr "contactinformatie"
+
+#, fuzzy
+msgid "container format the data is stored in"
+msgstr "codec waarin het stuk is opgeslagen"
 
 msgid "bitrate"
 msgstr "bitsnelheid"
