--- a/gstreamer/po/pl.po
+++ b/gstreamer/po/pl.po
@@ -6,7 +6,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: gstreamer 0.10.22.2\n"
 "Report-Msgid-Bugs-To: http://bugzilla.gnome.org/\n"
-"POT-Creation-Date: 2009-05-10 22:30+0100\n"
+"POT-Creation-Date: 2009-05-12 01:43+0100\n"
 "PO-Revision-Date: 2009-04-16 21:46+0200\n"
 "Last-Translator: Jakub Bogusz <qboosh@pld-linux.org>\n"
 "Language-Team: Polish <translation-team-pl@lists.sourceforge.net>\n"
@@ -459,6 +459,14 @@ msgstr "kodek napisów"
 
 msgid "codec the subtitle data is stored in"
 msgstr "kodek użyty do zapisu danych napisów"
+
+#, fuzzy
+msgid "container format"
+msgstr "informacje kontaktowe"
+
+#, fuzzy
+msgid "container format the data is stored in"
+msgstr "kodek użyty do zapisu danych"
 
 msgid "bitrate"
 msgstr "prędkość bitowa"
