--- a/gstreamer/po/pt_BR.po
+++ b/gstreamer/po/pt_BR.po
@@ -17,7 +17,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: gstreamer-0.10.22.2\n"
 "Report-Msgid-Bugs-To: http://bugzilla.gnome.org/\n"
-"POT-Creation-Date: 2009-05-10 22:30+0100\n"
+"POT-Creation-Date: 2009-05-12 01:43+0100\n"
 "PO-Revision-Date: 2009-04-16 21:51-0300\n"
 "Last-Translator: Fabrício Godoy <skarllot@gmail.com>\n"
 "Language-Team: Brazilian Portuguese <ldp-br@bazar.conectiva.com.br>\n"
@@ -475,6 +475,14 @@ msgstr "CODEC de legenda"
 
 msgid "codec the subtitle data is stored in"
 msgstr "CODEC de legenda usado nos dados"
+
+#, fuzzy
+msgid "container format"
+msgstr "informação de contato"
+
+#, fuzzy
+msgid "container format the data is stored in"
+msgstr "CODEC usado nos dados"
 
 msgid "bitrate"
 msgstr "taxa de bits"
