--- a/gstreamer/po/sk.po
+++ b/gstreamer/po/sk.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: gstreamer 0.10.20.3\n"
 "Report-Msgid-Bugs-To: http://bugzilla.gnome.org/\n"
-"POT-Creation-Date: 2009-05-10 22:30+0100\n"
+"POT-Creation-Date: 2009-05-12 01:43+0100\n"
 "PO-Revision-Date: 2008-09-25 09:55+0100\n"
 "Last-Translator: Peter Tuhársky <tuharsky@misbb.sk>\n"
 "Language-Team: Slovak <sk-i18n@lists.linux.sk>\n"
@@ -481,6 +481,14 @@ msgstr "video kodek"
 #, fuzzy
 msgid "codec the subtitle data is stored in"
 msgstr "kodek, v ktorom sú video údaje uložené"
+
+#, fuzzy
+msgid "container format"
+msgstr "kontaktné informácie"
+
+#, fuzzy
+msgid "container format the data is stored in"
+msgstr "kodek, v ktorom sú údaje uložené"
 
 msgid "bitrate"
 msgstr "Bitová rýchlosť"
